# spbd

./: .env.example  .envrc  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0bc2c9f1384a_create_users_table.py  633b8160df32_create_phrases_table.py  f953c29a255a_create_audios_table.py
docker/: Dockerfile  docker-compose.yaml
scripts/: demo_fixtures.py
spbd/: config.py  main.py  repositories.py  usecases.py  utils.py
spbd/core/: config.py  exceptions.py  loggs.py
spbd/domain/: entities.py  value_objects.py  values.py
spbd/infra/: db.py
spbd/repositories/: audio.py  common.py  phrase.py  user.py
spbd/routers/v1/: audio.py  user.py
tests/: conftest.py  test_utils.py
tests/repositories/: test_audio.py  test_phrase.py  test_user.py
tests/requests/v1/: test_audio.py  test_user.py
tests/storage/: .gitignore
tests/usecases/: test_audio.py  test_phrase.py  test_user.py
