[tool.poetry]
name = "spbd"
version = "0.1.0"
description = ""
authors = ["herlambang <heruherlambang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.7"}
pydantic-settings = "^2.7.1"
sqlmodel = "^0.0.22"
pydub = "^0.25.1"
alembic = "^1.14.1"
pytest = "^8.3.4"
psycopg = {extras = ["binary"], version = "^3.2.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
